--- a/index.html
+++ b/index.html
@@ -21,6 +21,8 @@ input#submitbutton {font-size:14pt;padding:11px;padding-top:13px;background-colo
 .footer {position:fixed;bottom:1em;width:100%;font-size:12pt;text-align:center;line-height: 1.2em;}
     </style>
     <meta name="viewport" content="initial-scale=0.5, width=device-width, height=device-height, minimum-scale=0.5, maximum-scale=0.5, user-scalable=no, target-densitydpi=device-dpi" />
+    <meta name="author" content="no clues here">
+    <meta name="keywords" content="or here">
     <meta name="apple-mobile-web-app-capable" content="yes">
   </head>
   <body>
